logs/django-easymode.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_easymode-0.14.5.egg-info'...
Listing './lib/python3.5/site-packages/easymode'...
Listing './lib/python3.5/site-packages/easymode/admin'...
Listing './lib/python3.5/site-packages/easymode/admin/forms'...
Listing './lib/python3.5/site-packages/easymode/admin/models'...
Listing './lib/python3.5/site-packages/easymode/debug'...
Listing './lib/python3.5/site-packages/easymode/easypublisher'...
Listing './lib/python3.5/site-packages/easymode/easypublisher/migrations'...
Listing './lib/python3.5/site-packages/easymode/easypublisher/templates'...
Listing './lib/python3.5/site-packages/easymode/easypublisher/templates/easymode'...
Listing './lib/python3.5/site-packages/easymode/easypublisher/templates/easymode/easypublisher'...
Listing './lib/python3.5/site-packages/easymode/easypublisher/templatetags'...
Listing './lib/python3.5/site-packages/easymode/i18n'...
Listing './lib/python3.5/site-packages/easymode/i18n/admin'...
Listing './lib/python3.5/site-packages/easymode/i18n/meta'...
Listing './lib/python3.5/site-packages/easymode/locale'...
Listing './lib/python3.5/site-packages/easymode/locale/en'...
Listing './lib/python3.5/site-packages/easymode/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/easymode/locale/it'...
Listing './lib/python3.5/site-packages/easymode/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/easymode/locale/nl'...
Listing './lib/python3.5/site-packages/easymode/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/easymode/management'...
Listing './lib/python3.5/site-packages/easymode/management/commands'...
Compiling './lib/python3.5/site-packages/easymode/management/commands/easy_copy_language.py'...
***   File "./lib/python3.5/site-packages/easymode/management/commands/easy_copy_language.py", line 60
    print u"saving %s" % update_instance
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easymode/management/commands/easy_reset_language.py'...
***   File "./lib/python3.5/site-packages/easymode/management/commands/easy_reset_language.py", line 61
    print u"resetting %s" % update_instance
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easymode/media'...
Listing './lib/python3.5/site-packages/easymode/media/easymode'...
Listing './lib/python3.5/site-packages/easymode/media/easymode/js'...
Compiling './lib/python3.5/site-packages/easymode/middleware.py'...
***   File "./lib/python3.5/site-packages/easymode/middleware.py", line 28
    ur'<a([^>]+)href="/(?!(%s|%s|%s))([^"]*)"([^>]*)>' % (
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easymode/templates'...
Listing './lib/python3.5/site-packages/easymode/templates/admin'...
Listing './lib/python3.5/site-packages/easymode/templates/i18n'...
Listing './lib/python3.5/site-packages/easymode/templates/tree'...
Listing './lib/python3.5/site-packages/easymode/templates/tree/admin'...
Listing './lib/python3.5/site-packages/easymode/templates/tree/admin/widgets'...
Listing './lib/python3.5/site-packages/easymode/templates/xslt'...
Listing './lib/python3.5/site-packages/easymode/templatetags'...
Listing './lib/python3.5/site-packages/easymode/tests'...
Compiling './lib/python3.5/site-packages/easymode/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/easymode/tests/__init__.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easymode/tests/fixtures'...
Listing './lib/python3.5/site-packages/easymode/tests/testcases'...
Compiling './lib/python3.5/site-packages/easymode/tests/testcases/testi18n.py'...
***   File "./lib/python3.5/site-packages/easymode/tests/testcases/testi18n.py", line 69
    print "hai er zit een bug in de mutex"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easymode/tests/testutils'...
Compiling './lib/python3.5/site-packages/easymode/tests/testutils/scriptutil.py'...
***   File "./lib/python3.5/site-packages/easymode/tests/testutils/scriptutil.py", line 49
    except Exception, e: raise ScriptError(str(e))
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easymode/tree'...
Listing './lib/python3.5/site-packages/easymode/tree/admin'...
Listing './lib/python3.5/site-packages/easymode/tree/admin/widgets'...
Listing './lib/python3.5/site-packages/easymode/utils'...
Compiling './lib/python3.5/site-packages/easymode/utils/languagecode.py'...
***   File "./lib/python3.5/site-packages/easymode/utils/languagecode.py", line 43
    STRIP_LANGUAGE_CODE_REGEX = re.compile(ur'/(?:%s)/' % "|".join(get_short_language_codes()))
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easymode/xslt'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
